# midnight-node

./: .envrc  .envrc.local.example  .gitignore  .gitmodules  .grype.yaml  .midnight.txt  AGENTS.md  COMPACTC_VERSION  CONTRIBUTING.md  Cargo.toml  Earthfile  LICENSE_HEADER.txt  README.md  justfile  partnerchains-dev.sh  rust-toolchain.toml  sync-with-qanet.sh  sync-with-testnet-02.sh
data-sources/: Cargo.toml  build.rs
data-sources/benches/: datasources.rs
data-sources/src/: lib.rs
data-sources/src/grpc/: client.rs  conversions.rs  mod.rs
data-sources/src/grpc/proto/: midnight_indexer.proto
data-sources/src/grpc/requests/: authority_selection_data_source_acropolis.rs  bridge_data_source_acropolis.rs  cnight_observation_acropolis.rs  federated_authority_data_source_acropolis.rs  mc_hash_data_source_acropolis.rs  mod.rs  sidechain_rpc_data_source_acropolis.rs
data-sources/src/sources/: mod.rs
data-sources/src/sources/authority_selection/: grpc.rs
data-sources/src/sources/bridge/: grpc.rs  mod.rs
data-sources/src/sources/cnight_observation/: grpc.rs
data-sources/src/sources/federated_authority/: grpc.rs
data-sources/src/sources/mc_hash/: grpc.rs
data-sources/src/sources/sidechain_rpc/: grpc.rs
data-sources/src/tests/: .env.test  authority_selection.rs  cnight_observation.rs  common.rs  configuration.rs  federated_authority.rs  integration.rs  mc_hash.rs  mod.rs  sidechain_rpc.rs
data-sources/src/tests/grpc_db_sync/: authority_selection.rs  cnight_observation.rs  federated_authority.rs  mc_hash.rs  mod.rs  sidechain_rpc.rs
ledger/: Cargo.toml  build.rs
ledger/helpers/: Cargo.toml  build.rs
ledger/helpers/src/: extract_tx_with_context.rs  lib.rs  utils.rs
ledger/helpers/src/fork/: fork_7_to_8.rs  fork_8_to_9.rs  fork_aware_context.rs  mod.rs  raw_block_data.rs
ledger/helpers/src/versions/: ecdsa_unimpl.rs  test_utilities_compat.rs
ledger/src/: json.rs  lib.rs  utils.rs
ledger/src/common/: mod.rs  types.rs
ledger/src/host_api/: ledger_7.rs  ledger_8.rs  ledger_9.rs  ledger_hf.rs  mod.rs
ledger/src/versions/common/: conversions.rs  mod.rs  storage.rs  types.rs  utxo_ordering_override.rs
ledger/src/versions/error_ext/: ledger_7.rs  ledger_8.rs  ledger_9.rs
ledger/src/versions/guaranteed_validation/: ledger_7.rs  ledger_8.rs  ledger_9.rs
ledger/src/versions/post_block_update/: ledger_7.rs  ledger_8.rs  ledger_9.rs
ledger/src/versions/system_tx/: ledger_7.rs  ledger_9.rs
node/: Cargo.toml  build.rs
node/src/: aura_to_babe_migration_keystore.rs  benchmarking.rs  cli.rs  command.rs  committee_membership.rs  extensions.rs  filtering_pool.rs  inherent_data.rs  lib.rs  main.rs  main_chain_follower.rs  memory_monitor.rs  metrics_push.rs  midnight_reference_hardware.json  peer_info_rpc.rs  reference_hardware.rs  rpc.rs  service.rs  sidechain_params_cmd.rs  util.rs
node/src/backend/: custom_parity_db.rs
node/src/cfg/: error.rs  mod.rs  shell_words_environment.rs  util.rs  validated_file.rs  validation_utils.rs
node/src/cfg/chain_spec_cfg/: mod.rs
node/src/cfg/memory_monitor_cfg/: mod.rs
node/src/cfg/meta_cfg/: mod.rs
node/src/cfg/midnight_cfg/: invariants.rs  mod.rs
node/src/cfg/storage_monitor_params_cfg/: mod.rs
node/src/cfg/substrate_cfg/: mod.rs
node/src/chain_spec/: mod.rs
node/src/genesis/: mod.rs
node/src/genesis/creation/: cnight_genesis.rs  ics_genesis.rs  mod.rs  permissioned_candidates_genesis.rs  reserve_genesis.rs
node/src/genesis/verification/: mod.rs  verify_auth_script_common.rs  verify_federated_authority_auth_script.rs  (+6 more)
node/src/partner_chains/: block_data_source_mock.rs  mod.rs
pallets/c2m-bridge/: Cargo.toml
pallets/c2m-bridge/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/cnight-observation/: Cargo.toml
pallets/cnight-observation/src/: benchmarking.rs  lib.rs  weights.rs
pallets/cnight-observation/tests/: tests.rs  validation_tests.rs
pallets/consensus-engine/: Cargo.toml
pallets/consensus-engine/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/throttle/: Cargo.toml
pallets/throttle/src/: check_throttle.rs  lib.rs  mock.rs  tests.rs
partner-chains/toolkit/consensus/: Cargo.toml  README.md
primitives/consensus-engine/: Cargo.toml
primitives/consensus-engine/src/: lib.rs
primitives/mainchain-follower/: Cargo.toml  build.rs
primitives/mainchain-follower/proto/: midnight_state.proto
primitives/mainchain-follower/src/: lib.rs
primitives/mainchain-follower/tests/: cnight_equivalence.rs
relay/: Cargo.toml
relay/src/: authorities.rs
runtime/: Cargo.toml  build.rs
runtime/common/src/: governance.rs
runtime/src/: authorship.rs  beefy.rs  c2m_bridge.rs  lib.rs  migrations.rs  mock.rs  session_manager.rs
runtime/src/weights/: frame_benchmarking.rs  frame_system.rs  mod.rs  pallet_beefy_mmr.rs  pallet_c2m_bridge.rs  pallet_cnight_observation.rs  pallet_collective.rs  pallet_federated_authority.rs  pallet_federated_authority_observation.rs  pallet_grandpa.rs  pallet_membership.rs  pallet_migrations.rs  pallet_mmr.rs  pallet_partner_chains_bridge.rs  pallet_preimage.rs  pallet_scheduler.rs  pallet_session_validator_management.rs  pallet_system_parameters.rs  pallet_timestamp.rs  pallet_tx_pause.rs
scripts/fetch-utxo-ordering/: Cargo.toml
scripts/fetch-utxo-ordering/src/: main.rs
tests/e2e/: Cargo.toml  README.md
tests/e2e/macros/: Cargo.toml
tests/e2e/src/: config.rs  faucet.rs  lib.rs  logger.rs
tests/e2e/tests/: c2m_bridge.rs  cnight.rs  contract_state.rs  governance.rs  lib.rs  operational.rs  rpc_abuse.rs
util/aiken-contracts-lib/: Cargo.toml
util/aiken-contracts-lib/src/: lib.rs
util/aiken-deployer/: Cargo.toml
util/aiken-deployer/src/: main.rs
util/toolkit/: Cargo.toml  PRD.md  README.md  test-images.docker-compose.yml
util/toolkit/examples/: single-tx.md
util/toolkit/src/: cli.rs  cli_parsers.rs  client.rs  fetcher.rs  genesis_generator.rs  lib.rs  main.rs  progress.rs  remote_prover.rs  sender.rs  utils.rs
util/toolkit/tests/: cached_context.rs  hardfork_e2e.rs  postgres_backend.rs  single_tx.rs  toolkit_e2e.rs
(+1077 files in other folders)
