[workspace]
resolver = "2"
members = [
    "ledger",
    "ledger/helpers",
    "metadata",
    "node",
    "pallets/midnight",
    "pallets/cnight-observation",
    "pallets/cnight-observation/mock",
    "pallets/midnight-system",
    "pallets/system-parameters",
    "pallets/system-parameters/rpc",
    "pallets/version",
    "primitives/beefy",
    "primitives/ics-observation",
    "primitives/reserve-observation",
    "primitives/midnight",
    "primitives/ledger",
    "primitives/system-parameters",
    "res",
    "runtime",
    "util/toolkit",
    "util/documented",
    "util/upgrader",
    "util/aiken-deployer",
    "util/aiken-contracts-lib",
    "tests/e2e",
    "relay",
    "docs",
]
[workspace.package]
license-file = "LICENSE"
edition = "2024"
version = "0.1.0"
authors = ["Midnight Foundation"]
homepage = "https://midnight.network"
repository = "https://github.com/midnightntwrk/mn4"

# Same lint list as polkadot-sdk
[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
unwrap_in_result = { level = "warn", priority = 1 }
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000
type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
useless_conversion = { level = "allow", priority = 2 }               # Types may change
unit_arg = { level = "allow", priority = 2 }                         # stylistic
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
derivable_impls = { level = "allow", priority = 2 }                  # false positives
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic

[workspace.dependencies]
# Midnight dependencies
# Ledger 7
mn-ledger = { package = "midnight-ledger", version = "7.0.2" }
ledger-storage = { package = "midnight-storage", version = "1.0.0", features = ["parity-db"] }
coin-structure = { package = "midnight-coin-structure", version = "2.0.0" }
onchain-runtime = { package = "midnight-onchain-runtime", version = "2.0.0" }
base-crypto = { package = "midnight-base-crypto", version = "1.0.0" }
transient-crypto = { package = "midnight-transient-crypto", version = "2.0.0" }
zswap = { package = "midnight-zswap", version = "7.0.2" }
zkir = { package = "midnight-zkir", version = "2.1.0" }

# Ledger 8
mn-ledger-8 = { package = "midnight-ledger", version = "=8.0.0-rc.3" }
ledger-storage-ledger-8 = { package = "midnight-storage", version = "2.0.0", features = ["parity-db"] }
onchain-runtime-ledger-8 = { package = "midnight-onchain-runtime", version = "=3.0.0-rc.1" }
zswap-ledger-8 = { package = "midnight-zswap", version = "=8.0.0-rc.3" }

# Hard-fork test dependencies

mn-ledger-hf = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-ledger", tag = "hard-fork-test-ledger-8.0.0-rc.2" }
ledger-storage-hf = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-storage", tag = "hard-fork-test-ledger-8.0.0-rc.2", features = ["parity-db"] }
coin-structure-hf = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-coin-structure", tag = "hard-fork-test-ledger-8.0.0-rc.2" }
onchain-runtime-hf = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-onchain-runtime", tag = "hard-fork-test-ledger-8.0.0-rc.2" }
base-crypto-hf = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-base-crypto", tag = "ledger-7.0.1" }
transient-crypto-hf = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-transient-crypto", tag = "hard-fork-test-ledger-8.0.0-rc.2" }
zswap-hf = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-zswap", tag = "hard-fork-test-ledger-8.0.0-rc.2" }
zkir-hf = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "zkir", tag = "hard-fork-test-ledger-8.0.0-rc.2" }

# res can't currently dep on mn-ledger without it bringing in non-std deps (which annoys the runtime).
midnight-serialize = "1.0.0"
midnight-serialize-hf = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-serialize", tag = "ledger-7.0.1" }

# Midnight local dependencies
midnight-node-ledger = { path = "ledger", default-features = false }
midnight-node-metadata = { path = "metadata", default-features = false }
midnight-node-ledger-helpers = { path = "ledger/helpers", default-features = false, features = ["test-utils"] }
midnight-node-res = { path = "res", default-features = false }
midnight-node-toolkit = { path = "util/toolkit", default-features = true }
pallet-midnight = { path = "pallets/midnight", default-features = false }
pallet-midnight-system = { path = "pallets/midnight-system", default-features = false }
pallet-midnight-rpc = { path = "pallets/midnight/rpc", default-features = false }
pallet-cnight-observation = { path = "pallets/cnight-observation", default-features = false }
pallet-cnight-observation-mock = { path = "pallets/cnight-observation/mock", default-features = false }
pallet-version = { path = "pallets/version", default-features = false }
pallet-system-parameters = { path = "pallets/system-parameters", default-features = false }
pallet-system-parameters-rpc = { path = "pallets/system-parameters/rpc", default-features = true }
pallet-federated-authority = { path = "pallets/federated-authority", default-features = false }
pallet-federated-authority-observation = { path = "pallets/federated-authority-observation", default-features = false }
documented = { path = "util/documented", default-features = false }

midnight-node-runtime = { path = "runtime", default-features = false }
midnight-primitives = { path = "primitives/midnight", default-features = false }
midnight-primitives-beefy = { path = "primitives/beefy", default-features = false }
midnight-primitives-ledger = { path = "primitives/ledger", default-features = false }
midnight-primitives-mainchain-follower = { path = "primitives/mainchain-follower", default-features = false }
midnight-primitives-cnight-observation = { path = "primitives/cnight-observation", default-features = false }
midnight-primitives-ics-observation = { path = "primitives/ics-observation", default-features = false }
midnight-primitives-reserve-observation = { path = "primitives/reserve-observation", default-features = false }
midnight-primitives-federated-authority-observation = { path = "primitives/federated-authority-observation", default-features = false }
midnight-primitives-system-parameters = { path = "primitives/system-parameters", default-features = false }

runtime-common = { path = "runtime/common", default-features = false }

# Partnerchains dependencies
partner-chains-db-sync-data-sources = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1", features = ["block-source", "candidate-source"] }
partner-chains-mock-data-sources = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
partner-chains-plutus-data = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
db-sync-sqlx = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
cardano-serialization-lib = { default-features = false, version = "^14.1.1" }
substrate-prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }

pallet-sidechain = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }

pallet-sidechain-rpc = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
sp-partner-chains-bridge = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }

pallet-session-validator-management = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
pallet-session-validator-management-rpc = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
pallet-partner-chains-bridge = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
sp-sidechain = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
sidechain-mc-hash = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
sidechain-domain = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
authority-selection-inherents = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
sidechain-slots = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
plutus = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
#pallet-block-rewards = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
#sp-block-rewards = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
sp-session-validator-management = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
sp-session-validator-management-query = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
time-source = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
pallet-partner-chains-session = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1", features = ["pallet-session-compat"] }
sp-partner-chains-consensus-aura = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
sc-partner-chains-consensus-aura = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
# Substrate dependencies

binary-merkle-tree = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
pallet-beefy = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
pallet-beefy-mmr = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
pallet-mmr = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
mmr-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
mmr-gadget = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-mmr-primitives = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }

pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
pallet-preimage = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
pallet-tx-pause = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
pallet-migrations = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
pallet-membership = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
pallet-collective = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
pallet-scheduler = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-version = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-genesis-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-externalities = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
partner-chains-node-commands = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
partner-chains-cli = { default-features = false, git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }

substrate-wasm-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
frame-try-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }

frame-executive = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
frame-benchmarking-cli = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
frame-storage-access-test-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-basic-authorship = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-blockchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-consensus-beefy = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-consensus-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-consensus-slots = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-state-machine = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
substrate-frame-rpc-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-tracing = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
prometheus-endpoint = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509", package = "substrate-prometheus-endpoint" }

substrate-build-script-utils = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-keystore = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }

sc-transaction-pool-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-telemetry = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-service = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-rpc-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-offchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-storage-monitor = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }

sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-chain-spec = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-consensus = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-network = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-executor = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-consensus-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-consensus-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-consensus-beefy = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-consensus-slots = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-client-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-cli = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-utils = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-consensus-grandpa-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sc-consensus-beefy-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-storage = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-keystore = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-keyring = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
sp-crypto-hashing = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }


parity-scale-codec = { version = "3.7.5", default-features = false }
scale-info = { version = "2.1.1", default-features = false }
scale-info-derive = { version = "2.1.1", default-features = false }

env_logger = "0.11.3"
itertools = { default-features = false, version = "0.14.0", features = ["use_alloc"] }

jsonrpsee = { version = "0.24.7", features = ["client-core", "server", "macros"] }

async-trait = { default-features = false, version = "0.1.87" }
futures = { default-features = false, version = "0.3.29" }
log = { default-features = false, version = "0.4.17" }
tokio = { version = "1.47.0", features = ["net", "rt-multi-thread", "macros", "time", "sync", "fs", "io-util"] }
assert_matches = "1.5.0"
hex = { default-features = false, version = "0.4.3" }
hex-literal = { default-features = false, version = "0.4.1" }
serde = { default-features = false, version = "1.0.188" }
serde_json = { default-features = false, version = '1.0.132' }
serde_valid = { default-features = false, version = "2.0.0" }
clap = { version = "4.4.18", features = ["env"] }
lazy_static = { version = "1.4.0", default-features = false }
derive-new = { version = "0.7.0", default-features = false }
figment = { version = "0.10.19", features = ["env", "test"] }
lru = { version = "0.16.3" }
subxt = "0.44.0"
subxt-signer = "0.44.0"
thiserror = { version = "1.0.60", default-features = false }
rand = { version = "^0.8.4", features = ["getrandom"] }
sha2 = "0.10.8"
toml = "0.9.0"
bip32 = "0.5.3"
derive-where = "1.5.0"
tempfile = "3.22.0"
impl-trait-for-tuples = "0.2.2"
test-log = "0.2"
sqlx = { version = "0.8.5", default-features = false }
prost = { version = "0.13.5", default-features = false}
reqwest = { version = "0.12.22", default-features = false, features = [ "rustls-tls" ] }

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
# Substrate deps
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
#librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
#libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
polkavm-linker = { opt-level = 3 }
primitive-types = { opt-level = 3 }
#reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }


[patch.crates-io]
cardano-serialization-lib = { git = "https://github.com/SupernaviX/cardano-serialization-lib", branch = "sg/patch-wasm-bindgen" }

[workspace.metadata.cargo-shear]
ignored = ["frame-storage-access-test-runtime"]
